--- a/src/modules/vendas/style.css
+++ b/src/modules/vendas/style.css
@@ -1,10 +1,14 @@
-body {
+body{
     background-color: #f0f0f0;
     font-family: Arial, Helvetica, sans-serif;
   }
 
+
 tr{
     text-align: center;
+    justify-content: center;
+    align-items: center;
+    text-justify: auto;
 }
 
 thead{
@@ -21,3 +25,16 @@ tr.cursor:hover{
     text-align: center;
     width: 50px;
 }
+
+a{
+    color: black;
+    text-decoration: none;
+}
+ #menu{
+    margin: 100px;
+    font-size: 40px;
+    background-color: #c7c4c4;
+    border: solid black 1px;
+    width: 33vw;
+    height: 33vh;
+ }
