--- a/src/modules/vendas/style.css
+++ b/src/modules/vendas/style.css
@@ -30,11 +30,14 @@ a{
     color: black;
     text-decoration: none;
 }
+a:hover{
+    color: black;
+
+}
  #menu{
     margin: 100px;
     font-size: 40px;
     background-color: #c7c4c4;
     border: solid black 1px;
     width: 33vw;
-    height: 33vh;
  }
